--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ flutter:
   assets:
     - assets/logo.png
     - assets/travel-bg2.jpg
+    - assets/travel-bg3.jpg
+    - assets/google.png
+    - assets/facebook.png
+    - assets/apple.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
