--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/travel-bg1.jpg
     - assets/travel-bg2.jpg
     - assets/travel-bg3.jpg
     - assets/google.png
@@ -74,11 +75,10 @@ flutter:
     - assets/res2.jpg
     - assets/res3.jpg
     - assets/res4.jpg
-    - assets/travel-bg2.jpg
-    - assets/travel-bg3.jpg
     - assets/google.png
     - assets/facebook.png
     - assets/apple.png
+    - assets/profile.jpg
 
 
 
